Squashed commit of the following:
commit c00fe5f9fa401bc2b0ecdcb75e6b81a290d746d3
Author: Hendrik <git@h3ndrk.de>
Date:   Sat Feb 3 17:19:32 2024 +0100

    Remove dbg!()s

commit 6874ac7cc1adcb7f0864cdcc8a33f061ee7b987a
Author: Hendrik <git@h3ndrk.de>
Date:   Sat Feb 3 17:14:33 2024 +0100

    Rename cross_inputs -> cross_input_fields

commit 8abc2a3613f61e86ae33d0f20f61e9209ccd6112
Author: Hendrik <git@h3ndrk.de>
Date:   Sat Feb 3 17:11:49 2024 +0100

    panic!() in ReplayerHardwareInterface

commit 235d05488ce6ca5eabdb07336410f90b8ddfa223
Author: Hendrik <git@h3ndrk.de>
Date:   Sat Feb 3 17:08:39 2024 +0100

    Rename index.rs to recording_index.rs

commit 1a07a87885583e526e4013b35a8149990296b579
Author: Hendrik <git@h3ndrk.de>
Date:   Sat Feb 3 17:06:54 2024 +0100

    ctx -> context

commit a7acb103f9737c664e05ae63c87dfa0c4d108b6b
Author: Hendrik <git@h3ndrk.de>
Date:   Sat Feb 3 17:04:30 2024 +0100

    Rename graph to what it represents

commit 09d7ed2e6e88f245382456127e65a393614429c9
Author: Hendrik <git@h3ndrk.de>
Date:   Sat Jan 13 18:20:36 2024 +0100

    Use workspace package information

commit 6b0a49b45b504822d9d53645ba820030889d739f
Author: Hendrik <git@h3ndrk.de>
Date:   Sat Jan 13 18:11:57 2024 +0100

    Add replayer build to CI

commit 1cc3c13855fef55293a4acb4500965e3496175cd
Author: Hendrik <git@h3ndrk.de>
Date:   Sat Jan 13 18:09:58 2024 +0100

    Disable Cargo.lock CI checks

commit f1ba7505041d57765faff8d08125790d484167b8
Author: Hendrik <git@h3ndrk.de>
Date:   Sat Jan 13 17:52:52 2024 +0100

    Remove unnecessary return annotation

commit 0ec821a72b6d74df37ccbeafccd6e68c84bb2e0a
Author: Hendrik <git@h3ndrk.de>
Date:   Sat Jan 13 17:52:40 2024 +0100

    Flatten instead of filter_map()

commit f91490c9cab630977926b6141b59cb0f742f3382
Author: Hendrik <git@h3ndrk.de>
Date:   Sat Jan 13 17:43:22 2024 +0100

    Remove unnecessary references

commit 91fa7a6adbda6232fcf3e134e4dd7990eb1f07dc
Author: Hendrik <git@h3ndrk.de>
Date:   Sat Jan 13 17:

--- a/crates/hulk_replayer/Cargo.toml
+++ b/crates/hulk_replayer/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hulk"
+name = "hulk_replayer"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
@@ -11,12 +11,15 @@ bincode = { workspace = true }
 color-eyre = { workspace = true }
 communication = { workspace = true, features = ["server"] }
 control = { workspace = true }
+ctrlc = { workspace = true }
+eframe = { workspace = true }
 framework = { workspace = true }
 geometry = { workspace = true }
 hardware = { workspace = true }
 ittapi = {  workspace = true }
 nalgebra = { workspace = true }
 serde = { workspace = true }
+serde_json = { workspace = true }
 serialize_hierarchy = { workspace = true }
 spl_network = { workspace = true }
 spl_network_messages = { workspace = true }
