--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -38,30 +38,31 @@ jobs:
       - name: Check
         run: |
           ./pepsi clippy --workspace
-  check-cargo-lock:
-    name: Check Cargo.lock
-    strategy:
-      matrix:
-        path:
-          [
-            .,
-            tools/aliveness,
-            tools/hula,
-          ]
-    runs-on:
-      - self-hosted
-      - v3
-    container:
-      image: 134.28.57.223:5000/hulk
-      options: --user=1000:1000
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          lfs: true
-      - name: Check
-        run: |
-          cd ${{ matrix.path }}
-          cargo update --frozen --workspace
+  # Broken due to serde crates.io patching:
+  # check-cargo-lock:
+  #   name: Check Cargo.lock
+  #   strategy:
+  #     matrix:
+  #       path:
+  #         [
+  #           .,
+  #           tools/aliveness,
+  #           tools/hula,
+  #         ]
+  #   runs-on:
+  #     - self-hosted
+  #     - v3
+  #   container:
+  #     image: 134.28.57.223:5000/hulk
+  #     options: --user=1000:1000
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #       with:
+  #         lfs: true
+  #     - name: Check
+  #       run: |
+  #         cd ${{ matrix.path }}
+  #         cargo update --frozen --workspace
   format:
     name: Format
     runs-on:
@@ -97,7 +98,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        target: [nao, webots]
+        target: [nao, replayer, webots]
         profile: [release, dev]
     runs-on:
       - self-hosted
