--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,9 @@ members = [
   "crates/geometry",
   "crates/hardware",
   "crates/hulk",
+  "crates/hulk_manifest",
   "crates/hulk_nao",
+  "crates/hulk_replayer",
   "crates/hulk_webots",
   "crates/kinematics",
   "crates/motionfile",
@@ -100,6 +102,7 @@ hardware = { path = "crates/hardware" }
 home = "0.5.4"
 hula-types = { path = "tools/hula/types" }
 hulk = { path = "crates/hulk" }
+hulk_manifest = { path = "crates/hulk_manifest" }
 i2cdev = "0.5.1"
 image = "0.24.4"
 indicatif = "0.17.2"
@@ -137,10 +140,11 @@ repository = { path = "crates/repository" }
 reqwest = { version = "0.11.23", features = ["blocking"] }
 rustfft = "6.0.1"
 semver = "1.0.20"
-serde = { version = "1.0.145", features = ["derive", "rc"] }
+serde = { version = "1.0.195", features = ["derive", "rc"] }
 serde-transcode = "1.1.1"
 serde_bytes = "0.11.8"
-serde_json = "1.0.91"
+serde_derive = "1.0.195"
+serde_json = "1.0.107"
 serde_test = "1.0.152"
 serialize_hierarchy = { path = "crates/serialize_hierarchy" }
 serialize_hierarchy_derive = { path = "crates/serialize_hierarchy_derive" }
@@ -158,7 +162,7 @@ tokio = { version = "1.21.2", features = ["full"] }
 tokio-tungstenite = "0.19.0"
 tokio-util = "0.7.4"
 toml = "0.8.8"
-topological-sort = "0.2.2"
+toposort-scc = "0.5.4"
 types = { path = "crates/types" }
 uuid = { version = "1.1.2", features = ["v4"] }
 v4l = { version = "0.12.1", git = "https://github.com/HULKs/libv4l-rs", rev = "be65819073514b193d082dd37dbcc2cfac3f6183" }
@@ -166,6 +170,12 @@ vision = { path = "crates/vision" }
 walkdir = "2.3.2"
 webots = { version = "0.8.0" }
 zbus = { version = "3.7.0" }
+
+[patch.crates-io]
+# Pinned to forked serde version since https://github.com/serde-rs/serde/pull/2513 is not merged
+serde = { git = "https://github.com/h3ndrk/serde.git", rev = "4fec5aac7d42a4ac1fc10af037f1c85eba29fa36" }
+# Pinned to forked serde version since https://github.com/serde-rs/serde/pull/2513 is not merged
+serde_derive = { git = "https://github.com/h3ndrk/serde.git", rev = "4fec5aac7d42a4ac1fc10af037f1c85eba29fa36" }
 
 [profile.incremental]
 inherits = "release"
