--- a/crates/code_generation/Cargo.toml
+++ b/crates/code_generation/Cargo.toml
@@ -12,3 +12,4 @@ itertools = { workspace = true }
 proc-macro2 = { workspace = true }
 quote = { workspace = true }
 source_analyzer = { workspace = true }
+syn = { workspace = true }
