--- a/crates/framework/Cargo.toml
+++ b/crates/framework/Cargo.toml
@@ -6,5 +6,7 @@ license.workspace = true
 homepage.workspace = true
 
 [dependencies]
+bincode = { workspace = true }
+color-eyre = { workspace = true }
 parking_lot = { workspace = true }
 serde = { workspace = true }
