--- a/crates/source_analyzer/Cargo.toml
+++ b/crates/source_analyzer/Cargo.toml
@@ -10,7 +10,7 @@ convert_case = { workspace = true }
 proc-macro2 = { workspace = true }
 quote = { workspace = true }
 syn = { workspace = true }
-topological-sort = { workspace = true }
+toposort-scc = { workspace = true }
 serde = { workspace = true }
 thiserror = { workspace = true }
 threadbound = { workspace = true }
