spin the camera
Co-authored-by: Maximilian Schmidt <maximilian@schmidt.so>

--- a/crates/coordinate_systems/Cargo.toml
+++ b/crates/coordinate_systems/Cargo.toml
@@ -11,3 +11,4 @@ homepage.workspace = true
 approx = { workspace = true }
 approx_derive = { workspace = true }
 serde = { workspace = true }
+serialize_hierarchy = { workspace = true }
