--- a/crates/hulk/Cargo.toml
+++ b/crates/hulk/Cargo.toml
@@ -16,11 +16,12 @@ energy_optimization = { workspace = true }
 framework = { workspace = true }
 geometry = { workspace = true }
 hardware = { workspace = true }
-ittapi = {  workspace = true }
-libc = { workspace = true, optional = true}
+ittapi = { workspace = true }
+libc = { workspace = true, optional = true }
 linear_algebra = { workspace = true }
 nalgebra = { workspace = true }
 projection = { workspace = true }
+object_detection = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 serialize_hierarchy = { workspace = true }
