Use new coordinate system

--- a/crates/object_detection/Cargo.toml
+++ b/crates/object_detection/Cargo.toml
@@ -10,12 +10,14 @@ homepage = "https://github.com/hulks/hulk"
 color-eyre = { workspace = true }
 control = { workspace = true }
 context_attribute = { workspace = true }
+coordinate_systems = { workspace = true }
 framework = { workspace = true }
 geometry = { workspace = true }
 hardware = { workspace = true }
 itertools = { workspace = true }
 ndarray = { workspace = true }
 lazy_static = { workspace = true }
+linear_algebra = { workspace = true }
 openvino = { workspace = true }
 serde = { workspace = true }
 types = { workspace = true }
