--- a/crates/hulk/Cargo.toml
+++ b/crates/hulk/Cargo.toml
@@ -20,6 +20,7 @@ ittapi = {  workspace = true }
 libc = { workspace = true }
 linear_algebra = { workspace = true }
 nalgebra = { workspace = true }
+projection = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 serialize_hierarchy = { workspace = true }
