--- a/crates/hulk_replayer/Cargo.toml
+++ b/crates/hulk_replayer/Cargo.toml
@@ -21,6 +21,7 @@ hardware = { workspace = true }
 ittapi = {  workspace = true }
 linear_algebra = { workspace = true }
 nalgebra = { workspace = true }
+projection = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 serialize_hierarchy = { workspace = true }
