--- a/crates/hulk_replayer/Cargo.toml
+++ b/crates/hulk_replayer/Cargo.toml
@@ -22,6 +22,7 @@ hardware = { workspace = true }
 ittapi = {  workspace = true }
 linear_algebra = { workspace = true }
 nalgebra = { workspace = true }
+object_detection = { workspace = true }
 projection = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
