--- a/crates/hulk_imagine/Cargo.toml
+++ b/crates/hulk_imagine/Cargo.toml
@@ -11,19 +11,28 @@ bincode = { workspace = true }
 buffered_watch = { workspace = true }
 calibration = { workspace = true }
 color-eyre = { workspace = true }
+control = { workspace = true }
 coordinate_systems = { workspace = true }
+energy_optimization = { workspace = true }
 framework = { workspace = true }
 geometry = { workspace = true }
 hardware = { workspace = true }
+indicatif = { workspace = true }
 ittapi = { workspace = true }
 linear_algebra = { workspace = true }
+nalgebra = { workspace = true }
 parameters = { workspace = true }
 projection = { workspace = true }
 serde = { workspace = true }
+serde_json = { workspace = true }
+# rmp-serde = { workspace = true }
+spl_network_messages = { workspace = true }
 path_serde = { workspace = true }
 tokio = { workspace = true }
 types = { workspace = true }
 vision = { workspace = true }
+walking_engine = { workspace = true }
+mcap = { workspace = true }
 
 [build-dependencies]
 code_generation = { workspace = true }
