--- a/crates/hulk_imagine/Cargo.toml
+++ b/crates/hulk_imagine/Cargo.toml
@@ -25,7 +25,7 @@ parameters = { workspace = true }
 projection = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-# rmp-serde = { workspace = true }
+rmp-serde = { workspace = true }
 spl_network_messages = { workspace = true }
 path_serde = { workspace = true }
 tokio = { workspace = true }
